--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,12 @@
 
 #genCon{
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
 }
 header, footer{
     text-align: center;
+    background-color: darkcyan;
+    color: wheat;
 }
 .card{
     display: flex;
